After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 72554 - Validation dialog don't enforce valid min/max values
Validation dialog don't enforce valid min/max values
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: GUI
git master
Other Linux
: Normal normal
: ---
Assigned To: Almer S. Tigelaar
Almer S. Tigelaar
Depends on:
Blocks:
 
 
Reported: 2002-02-25 19:30 UTC by cananian
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description cananian 2002-02-25 19:30:28 UTC
The GUI in Format->Cell->Validation allows you to select, say, a validation
op of 'BETWEEN' *without then filling in the min/max expr fields*.  The
dialog should not let you leave until you enter valid expressions in these
fields.
Comment 1 Almer S. Tigelaar 2002-05-03 15:54:00 UTC
Implemented in CVS, will show up in 1.1.4.