Mark validation as valid or invalid depending on criteria entered and set

2002-05-03  Almer S. Tigelaar  <almer@gnome.org>

	* dialog-cell-format.c (validation_rebuild_validation) : Mark
	validation as valid or invalid depending on criteria entered
	and set the style only when the validation is valid.
	(fmt_dialog_init_validation_page) : validation valid by default.
	(cb_fmt_dialog_dialog_buttons) : If the validation is not valid
	present the user with the option of either disabling validation
	or entering valid criteria. Correctly switches to the validation
	page and right widget if the latter is choosen.
	http://bugzilla.gnome.org/show_bug.cgi?id=72554